--- a/R3S/app/src/main/res/layout/content_subscriptions.xml
+++ b/R3S/app/src/main/res/layout/content_subscriptions.xml
@@ -6,7 +6,9 @@
     android:paddingBottom="@dimen/activity_vertical_margin" tools:showIn="@layout/activity_main"
     tools:context=".MainActivityFragment">
 
-    <TextView android:text="Hello World!" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <ListView
+        android:id="@+id/subscriptionsListView"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent" />
 
 </RelativeLayout>
