--- a/R3S/app/src/main/res/layout/content_subscriptions.xml
+++ b/R3S/app/src/main/res/layout/content_subscriptions.xml
@@ -6,6 +6,29 @@
     android:paddingBottom="@dimen/activity_vertical_margin" tools:showIn="@layout/activity_main"
     tools:context=".MainActivityFragment">
 
+    <FrameLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_centerVertical="true" >
+
+        <ImageView
+            android:id="@+id/head_arrowImageView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:src="@drawable/ic_arrow_refresh"
+            android:contentDescription="@string/head_arrowImage"/>
+
+        <ProgressBar
+            android:id="@+id/head_progressBar"
+            style="?android:attr/progressBarStyleSmall"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:visibility="gone" />
+    </FrameLayout>
+
     <ListView
         android:id="@+id/subscriptionsListView"
         android:layout_width="fill_parent"
