Add WebView to hold entry's content. Fix parsing entry contnet.

--- a/R3S/app/src/main/res/layout/content_entry_info.xml
+++ b/R3S/app/src/main/res/layout/content_entry_info.xml
@@ -9,4 +9,10 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:showIn="@layout/app_bar_entry_info" tools:context="com.nikolay.r3s.activities.EntryInfoActivity">
 
+    <WebView
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:id="@+id/webViewEntryInfo"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" />
 </RelativeLayout>
