--- a/R3S/app/src/main/res/layout/content_subscriptions.xml
+++ b/R3S/app/src/main/res/layout/content_subscriptions.xml
@@ -1,14 +1,17 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
     android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin" tools:showIn="@layout/activity_main"
-    tools:context=".MainActivityFragment">
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    app:layout_behavior="@string/appbar_scrolling_view_behavior"
+    tools:showIn="@layout/activity_main"
+    tools:context="com.nikolay.r3s.activities.MainActivityFragment">
 
-    <ListView
-        android:id="@+id/subscriptionsListView"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent" />
+    <com.baoyz.swipemenulistview.SwipeMenuListView
+        android:id="@+id/subscription_list_wiew"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
 </RelativeLayout>
