Add pull down to refresh in entries view

--- a/R3S/app/src/main/res/layout/content_entries.xml
+++ b/R3S/app/src/main/res/layout/content_entries.xml
@@ -5,7 +5,7 @@
     tools:context=".EntriesActivity">
 
     <ListView
-        android:id="@+id/entriesListView"
+        android:id="@+id/entries_list_view"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent" />
 </RelativeLayout>
