--- a/R3S/app/src/main/res/layout/activity_entries.xml
+++ b/R3S/app/src/main/res/layout/activity_entries.xml
@@ -6,5 +6,16 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.nikolay.r3s.activities.EntriesActivity">
-    <include layout="@layout/content_entries" />
+
+    <android.support.v4.widget.SwipeRefreshLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/entries_swipe_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <include layout="@layout/content_entries" />
+
+    </android.support.v4.widget.SwipeRefreshLayout>
+
 </RelativeLayout>
+
