--- a/R3S/app/src/main/res/layout/activity_subscriptions.xml
+++ b/R3S/app/src/main/res/layout/activity_subscriptions.xml
@@ -16,7 +16,7 @@
     </android.support.design.widget.AppBarLayout>
     <android.support.v4.widget.SwipeRefreshLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/swipe_container"
+        android:id="@+id/subscriptions_swipe_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
         <include layout="@layout/content_subscriptions" />
