--- a/R3S/app/src/main/res/layout/activity_subscribe.xml
+++ b/R3S/app/src/main/res/layout/activity_subscribe.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -7,32 +7,28 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.nikolay.r3s.activities.SubscribeActivity">
+    tools:context="com.nikolay.r3s.activities.SubscribeActivity"
+    android:orientation="vertical">
 
     <TextView
         android:id="@+id/headerSubscribe"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:text="@string/subscribe_header"
-        android:textAlignment="center" />
+        android:text="@string/subscribe_header" />
+
+    <Spinner
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/suggestions_spinner" />
 
     <EditText
         android:id="@+id/txtRss"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/headerSubscribe"
-        android:layout_marginTop="116dp"
-        android:textAlignment="center" />
+        android:layout_height="wrap_content"/>
 
     <Button
         android:id="@+id/btnSubscribe"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
         android:text="@string/subscribe_button" />
-</RelativeLayout>
+</LinearLayout>
