--- a/R3S/app/src/main/res/layout/content_subscriptions.xml
+++ b/R3S/app/src/main/res/layout/content_subscriptions.xml
@@ -1,17 +1,28 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:showIn="@layout/activity_main"
-    tools:context="com.nikolay.r3s.activities.MainActivityFragment">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/subscriptions_swipe_container"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context="com.nikolay.r3s.activities.MainActivity"
+    tools:showIn="@layout/activity_subscriptions"
+    app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-    <com.baoyz.swipemenulistview.SwipeMenuListView
-        android:id="@+id/subscription_list_view"
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin"
+      >
 
-</RelativeLayout>
+        <com.baoyz.swipemenulistview.SwipeMenuListView
+            android:id="@+id/subscription_list_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
+    </RelativeLayout>
+</android.support.v4.widget.SwipeRefreshLayout>
