--- a/R3S/app/src/main/res/layout/activity_subscriptions.xml
+++ b/R3S/app/src/main/res/layout/activity_subscriptions.xml
@@ -21,9 +21,7 @@
 
     </android.support.design.widget.AppBarLayout>
 
-
-        <include layout="@layout/content_subscriptions" />
-
+    <include layout="@layout/content_subscriptions" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
@@ -31,8 +29,8 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
+        android:scaleType="center"
         android:src="@android:drawable/ic_dialog_email"
-        app:backgroundTint="#fcca05"
-        android:scaleType="center" />
+        app:backgroundTint="#fcca05" />
 
 </android.support.design.widget.CoordinatorLayout>
