--- a/R3S/app/src/main/res/layout/activity_subscribe.xml
+++ b/R3S/app/src/main/res/layout/activity_subscribe.xml
@@ -31,4 +31,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/subscribe_button" />
+
+    <ProgressBar
+        android:id="@+id/loading_panel"
+        style="?android:attr/progressBarStyleLarge"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:visibility="gone" >
+    </ProgressBar>
 </LinearLayout>
