--- a/R3S/app/src/main/res/layout/activity_content.xml
+++ b/R3S/app/src/main/res/layout/activity_content.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto" android:id="@+id/main_content"
     android:layout_width="match_parent" android:layout_height="match_parent"
-    android:fitsSystemWindows="true" tools:context="com.nikolay.r3s.activities.ContentActivity">
+    android:fitsSystemWindows="true" tools:context="com.nikolay.r3s.activities.ContentActivity"
+    android:background="#d4d4d4">
 
     <android.support.design.widget.AppBarLayout android:id="@+id/appbar"
         android:layout_width="match_parent" android:layout_height="wrap_content"
