--- a/R3S/app/src/main/res/layout/activity_entries.xml
+++ b/R3S/app/src/main/res/layout/activity_entries.xml
@@ -7,7 +7,8 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.nikolay.r3s.activities.EntriesActivity">
+    tools:context="com.nikolay.r3s.activities.EntriesActivity"
+    android:background="#d4d4d4">
 
     <android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/entries_swipe_container"
