--- a/R3S/app/src/main/res/layout/activity_subscribe.xml
+++ b/R3S/app/src/main/res/layout/activity_subscribe.xml
@@ -8,23 +8,29 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.nikolay.r3s.activities.SubscribeActivity"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:gravity="center_vertical|center_horizontal"
+    android:background="#d4d4d4">
 
     <TextView
         android:id="@+id/headerSubscribe"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/subscribe_header" />
+        android:text="@string/subscribe_header"
+        android:gravity="center_horizontal" />
 
     <Spinner
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/suggestions_spinner" />
+        android:id="@+id/suggestions_spinner"
+        android:gravity="center_horizontal" />
 
     <EditText
         android:id="@+id/txtRss"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:hint="rss.cnn.com/rss/cnn_topstories.rss"
+        android:gravity="center_horizontal" />
 
     <Button
         android:id="@+id/btnSubscribe"
@@ -37,8 +43,7 @@
         style="?android:attr/progressBarStyleLarge"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:visibility="gone" >
+        android:visibility="gone"
+        android:layout_gravity="center">
     </ProgressBar>
 </LinearLayout>
