Fix https requests and finish visual changes

--- a/R3S/app/src/main/res/layout/content_entries.xml
+++ b/R3S/app/src/main/res/layout/content_entries.xml
@@ -7,5 +7,7 @@
     <ListView
         android:id="@+id/entries_list_view"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent" />
+        android:layout_height="fill_parent"
+        android:divider="@color/colorBackground"
+        android:dividerHeight="5dp"/>
 </RelativeLayout>
