--- a/R3S/app/src/main/res/layout/activity_subscribe.xml
+++ b/R3S/app/src/main/res/layout/activity_subscribe.xml
@@ -17,13 +17,23 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/subscribe_header"
-        android:gravity="center_horizontal" />
+        android:gravity="center_horizontal"
+        android:background="@color/colorItem"
+        android:layout_marginBottom="10dp"
+        android:paddingLeft="5dp"
+        android:paddingTop="5dp"
+        android:paddingRight="5dp"
+        android:paddingBottom="5dp"
+        android:textSize="18dp"
+        android:textStyle="italic" />
 
     <Spinner
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/suggestions_spinner"
-        android:gravity="center_horizontal" />
+        android:gravity="center_horizontal"
+        android:layout_marginBottom="20dp"
+        android:layout_marginTop="20dp" />
 
     <EditText
         android:id="@+id/txtRss"
@@ -36,7 +46,12 @@
         android:id="@+id/btnSubscribe"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/subscribe_button" />
+        android:text="@string/subscribe_button"
+        android:singleLine="false"
+        android:layout_marginTop="10dp"
+        android:textStyle="bold"
+        android:background="#ecaf04"
+        android:textColor="@color/colorItem" />
 
     <ProgressBar
         android:id="@+id/loading_panel"
