--- a/R3S/app/src/main/res/layout/content_subscriptions.xml
+++ b/R3S/app/src/main/res/layout/content_subscriptions.xml
@@ -22,7 +22,9 @@
         <com.baoyz.swipemenulistview.SwipeMenuListView
             android:id="@+id/subscription_list_view"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            android:divider="@color/colorBackground"
+            android:dividerHeight="5dp"/>
 
     </RelativeLayout>
 </android.support.v4.widget.SwipeRefreshLayout>
