--- a/R3S/app/src/main/res/layout/splash_screen.xml
+++ b/R3S/app/src/main/res/layout/splash_screen.xml
@@ -1,8 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/splash_image"
-    android:orientation="vertical">
-
-</LinearLayout>
+    android:background="@drawable/splash_image">
+    <ProgressBar
+        android:id="@+id/splash_loading"
+        style="?android:attr/progressBarStyleLarge"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        android:layout_gravity="bottom|center_vertical"
+        android:layout_alignParentBottom="true"
+        android:paddingBottom="80dp">
+    </ProgressBar>
+</RelativeLayout>
